--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,9 @@
     "devDependencies": {
       "@vitejs/plugin-vue": "^5.0.4",
       "vite": "^5.2.8"
+    },
+    "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
     }
+
   }
