--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build: ./backend
     ports:
       - "8080:80"
+    environment:
+      - CORS_ORIGINS=http://35.78.101.190:3000
+
 
   frontend:
     build: ./frontend
